# openiked-portable

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  cifuzz.yaml  iked.conf  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cflite_batch.yml  cflite_cron.yml  cflite_pr.yml  cmake.yml
cmake/: AddFuzzTest.cmake  FindClangRTFuzzer.cmake
compat/: CMakeLists.txt
ikectl/: CMakeLists.txt
iked/: CMakeLists.txt  iked.c  ikev2.c  proc.c
regress/cifuzz/: CMakeLists.txt  bundled_config_embedded_blob.c.in  bundled_config_extract.c  bundled_config_extract.h  bundled_config_prefix.c  bundled_config_prefix.h  ca.c  ca.h  ca_dispatch_control_fuzzer.c  ca_dispatch_ikev2.c  ca_dispatch_ikev2_fuzzer.c  ca_dispatch_parent_fuzzer.c  cifuzz_bundled_config_embedded_blob.c.in  cifuzz_bundled_config_embedded_blob.h  cifuzz_bundled_config_extract.c  cifuzz_bundled_config_extract.h  cifuzz_bundled_config_prefix.c  cifuzz_create_iked_env.c  cifuzz_create_iked_env_aux.c  cifuzz_destroy_iked_env.c  cifuzz_destroy_iked_env_aux.c  cifuzz_iked_env.h  cifuzz_imsg_clamp_if_larger.c  cifuzz_imsg_clamp_if_larger.h  cifuzz_imsg_fail_if_smaller.c  cifuzz_imsg_fail_if_smaller.h  cifuzz_vroute_cleanup_leaked_sockets-netlink.c  cifuzz_vroute_cleanup_leaked_sockets.c  cifuzz_vroute_cleanup_leaked_sockets.h  fuzzdataprovider.h  ikectl.c  ikectl_fuzzer.cpp  ikectl_fuzzer_impl.cpp  ikectl_fuzzer_impl.hpp  iked.conf.in  iked_env.c  ikev2_dispatch_cert.c  ikev2_dispatch_cert_fuzzer.c  ikev2_dispatch_control_fuzzer.c  ikev2_dispatch_parent_fuzzer.c  (+13 more)
regress/cifuzz/fuzzer_utils/: ca_utils.c  ca_utils.h
regress/cifuzz/mocks/: config_mocks.h  mocks.h  timer_mocks.h
regress/dh/: CMakeLists.txt
regress/new-fuzzer/: CMakeLists.txt  ca.h  fuzzdataprovider.c  fuzzdataprovider.h  iked_env.c  iked_env.h  ikev2_dispatch_cert.c  init_iked_env.c  main.c  main.cpp  parse_config.c  vroute_getaddr.c
regress/parser/: CMakeLists.txt
regress/parser-libfuzzer/: CMakeLists.txt  test_cifuzz.c
regress/test_helper/: CMakeLists.txt
vcpkg-triplets/: x64-freebsd.cmake
