project(CIFuzzTargets)

add_library(CIFuzzTestHelpers)
target_sources(CIFuzzTestHelpers PRIVATE fuzzdataprovider.c iked_env.c)
target_link_libraries(CIFuzzTestHelpers iked-shared compat)
target_compile_options(CIFuzzTestHelpers PUBLIC -fsanitize=fuzzer -fsanitize=address)
target_link_options(CIFuzzTestHelpers PUBLIC -fsanitize=fuzzer -fsanitize=address)

if (CIFUZZ_TESTING)
  add_fuzz_test(ikev2_dispatch_cert ikev2_dispatch_cert.c)
  target_link_libraries(ikev2_dispatch_cert PRIVATE iked-shared compat CIFuzzTestHelpers)
else ()
  add_executable(ikev2_dispatch_cert)
  target_sources(ikev2_dispatch_cert PRIVATE ikev2_dispatch_cert.c)
  target_link_libraries(ikev2_dispatch_cert PRIVATE iked-shared compat CIFuzzTestHelpers)
  add_test(NAME ikev2_dispatch_cert COMMAND ikev2_dispatch_cert -max_total_time=10 COMMAND_EXPAND_LISTS)
  set_property(TEST ikev2_dispatch_cert APPEND PROPERTY ENVIRONMENT_MODIFICATION "OPENSSL_CONF=set:${CMAKE_CURRENT_SOURCE_DIR}/openssl.cnf")
endif ()

if (CIFUZZ_TESTING)
  add_fuzz_test(vroute_getaddr vroute_getaddr.c)
  target_link_libraries(vroute_getaddr PRIVATE iked-shared compat CIFuzzTestHelpers)
else ()
  add_executable(vroute_getaddr)
  target_sources(vroute_getaddr PRIVATE vroute_getaddr.c)
  target_link_libraries(vroute_getaddr PRIVATE iked-shared compat CIFuzzTestHelpers)
  add_test(NAME vroute_getaddr COMMAND vroute_getaddr -max_total_time=10 COMMAND_EXPAND_LISTS)
  set_property(TEST vroute_getaddr APPEND PROPERTY ENVIRONMENT_MODIFICATION "OPENSSL_CONF=set:${CMAKE_CURRENT_SOURCE_DIR}/openssl.cnf")
endif ()

# these are just for diagnostics in case the fuzzers refuse to load the legacy ciphersuite
add_test(NAME OpenSSLProvidersDefault COMMAND ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/tools/openssl/openssl list -providers -verbose)
set_property(TEST OpenSSLProvidersDefault PROPERTY ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}$<$<CONFIG:Debug>:/debug>/bin")
set_property(TEST OpenSSLProvidersDefault PROPERTY ENVIRONMENT_MODIFICATION "LD_LIBRARY_PATH=path_list_prepend:${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}$<$<CONFIG:Debug>:/debug>/lib")

add_test(NAME OpenSSLProvidersCustomized COMMAND ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/tools/openssl/openssl list -providers -verbose)
set_property(TEST OpenSSLProvidersCustomized PROPERTY ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}$<$<CONFIG:Debug>:/debug>/bin")
set_property(TEST OpenSSLProvidersCustomized PROPERTY ENVIRONMENT_MODIFICATION "LD_LIBRARY_PATH=path_list_prepend:${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}$<$<CONFIG:Debug>:/debug>/lib")
set_property(TEST OpenSSLProvidersCustomized APPEND PROPERTY ENVIRONMENT_MODIFICATION "OPENSSL_CONF=set:${CMAKE_CURRENT_SOURCE_DIR}/openssl.cnf")
